--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.9.24",
     "multer": "^1.4.2",
     "node-xlsx": "^0.15.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "react-bootstrap-typeahead": "^5.1.2"
   }
 }
