--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "moment-timezone": "^0.5.32",
     "mongoose": "^5.9.24",
     "multer": "^1.4.2",
     "node-xlsx": "^0.15.0",
