--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.8.0",
+    "jsonwebtoken": "^8.5.1",
     "moment-timezone": "^0.5.32",
-    "mongoose": "^5.9.24",
+    "mongoose": "^5.11.8",
     "multer": "^1.4.2",
     "node-xlsx": "^0.15.0",
-    "nodemon": "^2.0.4",
-    "react-bootstrap-typeahead": "^5.1.2"
+    "nodemon": "^2.0.6",
+    "react-bootstrap-typeahead": "^5.1.4"
   }
 }
