--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "express": "^4.17.1",
     "express-validator": "^6.8.0",
     "jsonwebtoken": "^8.5.1",
+    "jsreport-core": "^2.10.1",
+    "jsreport-express": "^2.8.1",
+    "jsreport-templates": "^2.4.0",
     "moment-timezone": "^0.5.32",
     "mongoose": "^5.11.8",
+    "mongoose-sequence": "^5.3.0",
     "multer": "^1.4.2",
     "node-xlsx": "^0.15.0",
     "nodemon": "^2.0.6",
