--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsreport-templates": "^2.4.0",
     "moment-timezone": "^0.5.32",
     "mongoose": "^5.11.8",
+    "mongoose-float": "^1.0.4",
     "mongoose-sequence": "^5.3.0",
     "multer": "^1.4.2",
     "node-xlsx": "^0.15.0",
